objects/revcult__Fill_Rates_Job__c.object
<CustomObject>
    <fields>
        <fullName>revcult__All_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Fill_Rate_Empties_Job_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fill Rate Empties Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Had_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Caught Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Items_Processed__c</fullName>
        <label>Items Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Job_Record_Count__c</fullName>
        <label>Job Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Run_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>revcult__Security_Insights_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Insights Job</label>
        <referenceTo>revcult__Security_Insights_Refresh__c</referenceTo>
        <relationshipLabel>Fill Rates Jobs</relationshipLabel>
        <relationshipName>Fill_Rates_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>revcult__Total_Items__c</fullName>
        <label>Total Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Total_Objects_With_Records__c</fullName>
        <label>Total Objects With Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Uses_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses Files</label>
        <type>Checkbox</type>
    </fields>
    <label>Fill Rates Job</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fill Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fill Rates Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>